edited main.rb with post method

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,7 @@
 <h1>Movies</h1>
 <p>Add your favorite movies</p>
 
+<form action="/" method="post">
+  <p>Title: <input type="text" name="title" autofocus></p>
+  <button>Submit</button>
+</form>
