--- a/views/index.erb
+++ b/views/index.erb
@@ -5,3 +5,12 @@
   <p>Title: <input type="text" name="title" autofocus></p>
   <button>Submit</button>
 </form>
+
+<% @movies.each do |movie| %>
+  <li>
+    <a href="/movie/<%= movie[0] %>">
+      <%= movie[0] %>
+    </a>
+  </li>
+<% end %>
+</ul>
