--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <h1>Movies</h1>
+<h3><a href="/about">About me</a></h3>
 <p>Add your favorite movies</p>
 
 <form action="/" method="post">
@@ -15,4 +16,3 @@
 <% end %>
 </ul>
 
-<a href="/about">About me</a>
