--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,9 @@
 <h1>Movies</h1>
 <h3><a href="/about">About me</a></h3>
-<p>Add your favorite movies</p>
+
+<img src="logo.jpg" width=200>
+
+<p>Add a favorite movie</p>
 
 <form action="/" method="post">
   <p>Title: <input type="text" name="title" autofocus></p>
