Fixed problem. Closed CSV FIle

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -3,5 +3,5 @@
 <h2> Year: <%=@movie_info_array[1] %></h2>
 <h2> Director: <%=@movie_info_array[2] %></h2>
 <h2> Tagline: <%=@movie_info_array[3] %></h2>
-<img src="<%=@movie_info_array[4] %>" />
+<img src="<%=@movie_info_array[4] %>"  width="500"/>
 
