--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,4 +1,5 @@
 <p><a href="/">Back to Home</a></p>
+<p><a href="/new_movie">Add New Movie</a></p>
 <h1><%= @title %></h1>
 <h2> Year: <%=@movie_info_array[1] %></h2>
 <h2> Director: <%=@movie_info_array[2] %></h2>
