Added logo and nav bar

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<img src="logo.jpg" />
+
 <h2>Your Favorite Movies</h2>
 
 <ul>
@@ -5,5 +7,3 @@
     <li><a href="movie/<%= movie[0] %>"><%= movie[0] %></a></li>
   <% end %>
 </ul>
-
-<a href="/new_movie">Add Movie</a>
