--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,5 +5,10 @@
 </head>
 <body>
   <%= yield %>
+  <a href="/about">Check out Kevon's Favorite</a>
+  <br/>
+  <a href="/new_movie">Add Movie</a>
+  <br/>
+  <a href="../../">Back</a>
 </body>
 </html>
