Add get movie/name route block and add structure to movie.erb file

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -1,1 +1,10 @@
 <h1>Favorite Movies</h1>
+<ul>
+  <% @movies_hash.each do |title, info|%>
+    <li>
+      <a href="/movie/<%= title %>">
+        <%= title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
