--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,9 @@
 </head>
 <body><%= yield %></body><br>
 <a href= "/movie_query">Add Another Movie</a><br>
-<a href= "/">Return Home</a>
+<a href= "/">About</a><br>
+<a href= "/movies">Return Home</a><br>
+<img src="/popcorn.png" width:10/>
 
 </body>
 </html>
