added layout nav and changed main to check for duplicate favorite entries

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,5 +6,9 @@
 <body>
 	<h1> IMBD Favorites</h1>
 	<%=yield%>
+	<footer>
+		<p><a href = "/favorites">Back to the Favorites list</a></p>
+		<p><a href = "/new_favorite"> Add a new Favorite</a></p>
+	</footer>
 </body>
 </html>
