Add get new_movie route on main.rb and add structure to new_movie.erb file

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -1,6 +1,6 @@
 <h1>Favorite Movies</h1>
 <ul>
-  <% @movies_hash.each do |title, info|%>
+  <% @movies.each do |title, info|%>
     <li>
       <a href="/movie/<%= title %>">
         <%= title %>
