added newmovie.erb and moive.erb plus get methods to main.rb accidentally wrote this comment for wrong commit earlier on twitter

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -2,4 +2,8 @@
 
 <ul>
 <% @movies.each do |movie| %>
-  <li><%= movie[0] %> </li>
+  <li><%= movie[0] %></li>
+<% end %>
+</ul>
+
+<a href="/new_movie">Add a movie</a>
