--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,11 +4,12 @@
 	<title>IMBD Faves</title>
 </head>
 <body>
+	<img src = "http://t1.gstatic.com/images?q=tbn:ANd9GcSYd2KAKZAti392VExtut1987Dw3IbUcVyGNKoUWptRDMGj8_wy"/ style = "float:left">
 	<h1> IMBD Favorites</h1>
 	<%=yield%>
 	<footer>
-		<p><a href = "/favorites">Back to the Favorites list</a></p>
-		<p><a href = "/new_favorite"> Add a new Favorite</a></p>
+		<h2><a href = "/about">Back to the Favorites list</a></h2>
+		<h2><a href = "/new_favorite"> Add a new Favorite</a></h2>
 	</footer>
 </body>
 </html>
