--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,1 +1,6 @@
-<%=@movie.inspect%>
+<h3> Movie Page: <%=@movie[0]%></h3>
+<img src = "<%=@movie[3]%>"/>
+<h4> Directed by: <%=@movie[2]%></h4>
+<h4> Year: <%= @movie[1]%></h4>
+<h4> IMDB Rating: <%=@movie[4]%></h4>
+
