fixed format table on new_movie

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IMDB Library</title>
+    <meta charset="utf-8">
+    <title>Sinatra Stock Ticker</title>
   </head>
   <body>
-    <%=yield%>
+  <%= yield %>
   </body>
 </html>
