Add public directory with logo. Add logo to layout file. Add about me page.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Christine's Movie Site</title>
+  <img src="domino.jpg" alt="domino logo" width=100/>
 </head>
 <body>
+  <a href="/about_me">About Me</a>
   <%= yield %>
 </body>
 </html>
