--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,8 @@
   <img src="domino.jpg" alt="domino logo" width=100/>
 </head>
 <body>
+  <a href="/">Favorite Movies</a>
+  <a href="/new_movie">Add a New Movie</a>
   <a href="/about_me">About Me</a>
   <%= yield %>
 </body>
