--- a/views/movies.erb
+++ b/views/movies.erb
@@ -1,5 +1,9 @@
 <h1>My Favorite Movies</h1>
 
 <ul>
-<% @movies.each do |movie| %>
-  <li><%= movie[0] %></li>
+<% @movie_titles.each do |title| %>
+  <li><a href='/movie/<%= "#{title}" %>'><%= "#{title}" %></a></li>
+<% end %>
+</ul>
+
+<a href="/new_movie">Add a new movie</a>
