--- a/views/new_movie.erb
+++ b/views/new_movie.erb
@@ -1,6 +1,6 @@
 <h3>Please enter the title of the film you would like to add.</h3>
 
-<form action="/new_movie" method="post">
+<form action="/new_movie" method="post" autofocus>
   <input type="text" name="title">
   <button>Add movie</button>
 </form>
