Week2 Day3 Sinatra Movie homework finished version

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Favorite Movies</title>
+  <title>My favorite shows</title>
 </head>
 
 <body>
-  <img src="./images/pink-unicorn.jpg" />
+  <img src="../pink-unicorn.jpg" height=75px />
+  <a href="/">Home</a>
+  <a href="/about">About</a>
   <%= yield %>
 </body>
 
