finally got my csv to populate, i was about to choke a ..

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,7 +1,12 @@
 
 
+<h1><%=(@name).movie.title%></h1>
 
-<form action="/" method= "get">
-  <input type="text" name="ticker">
-  <button>F</button>
-</form>
+<p><img src="<%=(@name).movie.poster%>" width=400/></p>
+
+<li><%=(@name).movie.director%></li>
+
+<li><%=(@name).movie.director%></li>
+
+
+
