--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sinatra Stock Ticker</title>
+    <title>Super Awesome Movie Show</title>
   </head>
   <body>
   <%= yield %>
