--- a/views/new_movie.erb
+++ b/views/new_movie.erb
@@ -1,7 +1,8 @@
-<h1>Enter New Move</h1>
+<h1>Enter New Movie</h1>
 
 
-<form action="/" method= "get">
-  <input type="text" name="ticker">
+<form action="/" method= "post">
+  <input type="text" name="new_movie">
   <button>Enter New Movie</button>
 </form>
+
