it works, i think

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,9 +1,11 @@
-<% @movies.each do |title, movie_data| %>
-  <h1><%= movie_data[0] %></h1>
-    <ul>
-    <li>Year: <%= movie_data[1] %></li>
-    <li>Director: <%= movie_data[2] %></li>
-    <li>Tagline: <%= movie_data[4] %></li>
-    </ul>
-    <a href="<%=movie_data[3]%>"><img src="<%=movie_data[3]%>" width=400/></a>
-<%end%>
+<h1><%= @movie_info[0] %></h1>
+
+<ul>
+<li>Year released: <%= @movie_info[1] %></li>
+<li>Director: <%= @movie_info[2] %></li>
+<li>Tagline: <%= @movie_info[4] %></li>
+</ul>
+
+<a href="<%=@movie_info[3]%>"><img src="<%=@movie_info[3]%>" width=400/></a>
+
+
