--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,1 +1,9 @@
-hi
+<% this_title = @title %>
+<% movie = Imdb::Search.new(this_title).movies.first %>
+<h1><%= movie.title %></h1>
+<img src="<%= movie.poster %>" height="500" /><p></p>
+<strong>Plot: </strong><%= movie.plot_summary %><br />
+<strong>Starring: </strong><%= movie.cast_members.first %> as <%= movie.cast_characters.first%><br />
+<strong>Directed by: </strong><%= movie.director.first %><br />
+<strong>Produced by: </strong><%= movie.company %><br />
+<strong>Released: </strong><%= movie.year %><br />
