corrected syntax and populated both movies and movie title pages

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,12 +1,6 @@
+<h1>Enter A New Movie</h1>
 
 
-<h1><%=(@name).movie.title%></h1>
-
-<p><img src="<%=(@name).movie.poster%>" width=400/></p>
-
-<li><%=(@name).movie.director%></li>
-
-<li><%=(@name).movie.director%></li>
 
 
 
