--- a/views/new_movie.erb
+++ b/views/new_movie.erb
@@ -1,8 +1,8 @@
-<h1>Enter New Movie</h1>
+<h1>Come on baby hit me with a new movie</h1>
 
-
-<form action="/" method= "post">
-  <input type="text" name="new_movie">
+<form action="/new_movie" method= "post">
+  <input type="text" name="title">
   <button>Enter New Movie</button>
 </form>
+
 
