--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,8 +1,7 @@
-<!-- <%= my_movie = Imdb::Search.new("#{movie_title}").movies.first %>
-# <%= puts my_movie.title %>
-# <%= puts my_movie.poster %>
-# <%= puts my_movie.year %> -->
+<h1>Cinema</h1>
 
-<% @movie.each do |movie| %>
-  <%= movie[:movie_title]%>
-  <%end%>
+<h2>Title <%= @info[0] %> </h2>
+<h2>Year <%= @info[1] %> </h2>
+<h2>Director <%= @info[2] %> </h2>
+<h2><img src = "<%=@info[3]%>"/></h2>
+<h2>Revenue <%= @info[4] %> </h2>
