updated main file

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,7 +1,7 @@
 <h1>Cinema</h1>
 
-<h2>Title <%= @info[0] %> </h2>
-<h2>Year <%= @info[1] %> </h2>
-<h2>Director <%= @info[2] %> </h2>
-<h2><img src = "<%=@info[3]%>"/></h2>
-<h2>Revenue <%= @info[4] %> </h2>
+<h1><%= @single_movie[0] %></h1>
+<h2>Year: <%= @single_movie[1] %></h2>
+<h2>Director: <%= @single_movie[2] %></h2>
+
+<img src="<%= @single_movie[3] %>">
