Fixed the URL routing problem by adding a URI::encoder

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -7,3 +7,5 @@
 <strong>Directed by: </strong><%= movie.director.first %><br />
 <strong>Produced by: </strong><%= movie.company %><br />
 <strong>Released: </strong><%= movie.year %><br />
+
+<p><a href="/">Back to movie list!</a></p>
