added static image

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,2 +1,13 @@
-<%= yield %>
+<!doctype html>
+<html>
+<head>
+  <title>Favorite Movies</title>
+</head>
+<body>
+  <a href="/"><img src="/favorite_movies_logo.png" alt="favorite movies logo" width=200></a>
+  <h1>Favorite Movies</h1>
+  <%= yield %>
+</body>
+</html>
+
 
