--- a/views/add_movie.erb
+++ b/views/add_movie.erb
@@ -1,6 +1,6 @@
 <h1>What are your favorite movies?</h1>
 
-<form action="/add_movie" method="get">
+<form action="/add_movie" method="post">
   <label for="title">Title</label><br>
   <input type="text" name="title" autofocus><br>
   <button>Add movie</button>
