--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @movies.each do |movie| %>
-  <li><a href="movie/<%= URI::encode(movie[0]) %>"><%= movie[0] %></a></li>
+    <li><a href="/movie/<%= movie[0] %>"><%= movie[0] %></a></li>
   <% end %>
 </ul>
