--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,5 +5,7 @@
   </head>
   <body>
   <%= yield %>
+  <p><a href="/">Favorite movies list<a><p>
+  <p><a href="/add_movie">Add a favorite movie!</a></p>
   <body>
 </html>
