added the 'add movie button'

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -10,6 +10,11 @@
 <% end %>
 </ul>
 
+<h4>Add Movie</h4>
+<form action="/add_movie" method="get">
+  <input type="text" name="movie">
+  <button>GO</button>
+</form>
 
 
 
