--- a/views/form.erb
+++ b/views/form.erb
@@ -1,4 +1,4 @@
-<form action="/form" method="get">
+<form action="/add_movie" method="post">
   <input type="text" name="movie">
   <button>GO</button>
 </form>
