--- a/views/new_movie.erb
+++ b/views/new_movie.erb
@@ -1,4 +1,4 @@
-<h1>Come on baby hit me with a new movie</h1>
+<h1>Come on baby, hit me with a new movie</h1>
 
 <form action="/new_movie" method= "post">
   <input type="text" name="title">
